--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,6 +44,7 @@ jobs:
       run: npm run build
     - name: Run server
       run: nohup npm run start &
+    - name: Sleep for 3 seconds
       run: sleep 3
     - name: Run tests
       run: npm run test
