--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,8 @@ jobs:
     services:
       redis:
         image: redis
+        ports:
+          - 6379:6379
       mongodb:
         image: mongo:3.4.23
         ports:
