--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'node_modules'
+    - name: clean cache
+      run: npm cache clean --force
     - name: Install dependencies
       run: npm install
     - name: Run build
