--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'node_modules'
+        cache: 'npm'
     - name: clean cache
       run: npm cache clean --force
     - name: Install dependencies
